Initial changelog template for 0.10.4.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.10-4) UNRELEASED; urgency=low
+
+  *
+
+ -- David Steele <dsteele@gmail.com>  Wed, 12 Jun 2013 20:36:43 -0400
+
 cloudprint (0.10-3) unstable; urgency=low
 
   * Copyright had license text for LGPL instead of the correct GPL-2+
