--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cloudprint (0.10-5) UNRELEASED; urgency=low
+cloudprint (0.10-5) unstable; urgency=low
 
   * fixxmpp.patch
     - Variables spelled wrong in xmpp.py
@@ -6,7 +6,7 @@ cloudprint (0.10-5) UNRELEASED; urgency=low
   * xmpprotocol.patch
     - Update XMPP protocol to Google example (phineasgage at github).
 
- -- David Steele <dsteele@gmail.com>  Mon, 07 Oct 2013 19:03:30 -0400
+ -- David Steele <dsteele@gmail.com>  Wed, 09 Oct 2013 19:24:20 -0400
 
 cloudprint (0.10-4) unstable; urgency=low
 
