--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cloudprint (0.10-6) unstable; urgency=low
+
+  * Fix crash when XMPP unable to connect.
+  * Rework patches to use git format-patches from cloudprint git repo.
+
+ -- David Steele <dsteele@gmail.com>  Thu, 10 Oct 2013 19:12:39 -0400
+
 cloudprint (0.10-5) unstable; urgency=low
 
   * fixxmpp.patch
