--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 cloudprint (0.10-7) UNRELEASED; urgency=low
 
   * Better cleanup of pid lock file.
+  * Remove the logged debug traceback on XMPP connect errors.
 
  -- David Steele <dsteele@gmail.com>  Fri, 11 Oct 2013 22:19:27 -0400
 
