--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ cloudprint (0.10-7) unstable; urgency=low
   * Remove the logged debug traceback on XMPP connect errors.
   * Broaden python Depends to allow installation on stable.
       (only unstable likes the :any modifier on python)
+  * Add missing Depends to python-daemon.
 
  -- David Steele <dsteele@gmail.com>  Fri, 11 Oct 2013 22:19:27 -0400
 
