--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ cloudprint (0.10-8) UNRELEASED; urgency=low
 
   * Update VCS and home page references to reflect github name change.
   * Add missing Depends to python-daemon.
+  * Use the python Depends macro, for a sid-only build.
 
  -- David Steele <dsteele@gmail.com>  Tue, 29 Oct 2013 18:23:06 -0400
 
