--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 cloudprint (0.10-9) UNRELEASED; urgency=medium
 
-  * 
+  * Harden XMPP processing.
+  * Add command line option to store username & password.
+    - Refresh SASL token on XMPP connection errors.
 
  -- David Steele <dsteele@gmail.com>  Wed, 18 Dec 2013 00:21:03 -0500
 
