--- a/debian/cloudprint.1
+++ b/debian/cloudprint.1
@@ -28,6 +28,10 @@ path to Google account ident data (default ~/.cloudprintauth). The format of the
 \fB\-c\fR
 establish credentials to the service, then exit.
 .TP
+\fB\-u\fR
+store username/password in addition to login token
+to avoid authentication expiration.
+.TP
 \fB\-h\fR
 display help
 .PP
