--- a/debian/cloudprint.1
+++ b/debian/cloudprint.1
@@ -32,6 +32,9 @@ establish credentials to the service, then exit.
 store username/password in addition to login token
 to avoid authentication expiration.
 .TP
+\fB\-f\fR
+fast poll, if notifications aren't working.
+.TP
 \fB\-h\fR
 display help
 .PP
