--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-cloudprint (0.10-8) UNRELEASED; urgency=low
+cloudprint (0.10-9) UNRELEASED; urgency=medium
+
+  * 
+
+ -- David Steele <dsteele@gmail.com>  Wed, 18 Dec 2013 00:21:03 -0500
+
+cloudprint (0.10-8) unstable; urgency=low
 
   * Update VCS and home page references to reflect github name change.
   * Add missing Depends to python-daemon.
