--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cloudprint (0.10-9) UNRELEASED; urgency=medium
+cloudprint (0.10-9) unstable; urgency=low
 
   * Harden XMPP processing.
   * Add command line option to store username & password.
@@ -8,7 +8,7 @@ cloudprint (0.10-9) UNRELEASED; urgency=medium
   * Set the Python path to ensure the right daemon module loaded.
   * Add support for the fast poll option for XMPP failure workaround.
 
- -- David Steele <dsteele@gmail.com>  Wed, 18 Dec 2013 00:21:03 -0500
+ -- David Steele <dsteele@gmail.com>  Sun, 22 Dec 2013 12:02:59 -0500
 
 cloudprint (0.10-8) unstable; urgency=low
 
