--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.11-1) UNRELEASED; urgency=medium
+
+  * 
+
+ -- David Steele <dsteele@gmail.com>  Sun, 05 Jan 2014 21:38:43 -0500
+
 cloudprint (0.10-9) unstable; urgency=low
 
   * Harden XMPP processing.
