--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 cloudprint (0.11-1) UNRELEASED; urgency=medium
 
-  * 
+  * Update debian files based on Debian policy 3.9.4 and 3.9.5.
 
  -- David Steele <dsteele@gmail.com>  Sun, 05 Jan 2014 21:38:43 -0500
 
