Bring the cloudprint man page in line with code

--- a/debian/cloudprint.1
+++ b/debian/cloudprint.1
@@ -28,12 +28,11 @@ path to Google account ident data (default ~/.cloudprintauth). The format of the
 \fB\-c\fR
 establish credentials to the service, then exit.
 .TP
-\fB\-u\fR
-store username/password in addition to login token
-to avoid authentication expiration.
-.TP
 \fB\-f\fR
 fast poll, if notifications aren't working.
+.TP
+\fB\-v\fR
+verbose logging.
 .TP
 \fB\-h\fR
 display help
