--- a/debian/cloudprint.1
+++ b/debian/cloudprint.1
@@ -31,6 +31,9 @@ establish credentials to the service, then exit.
 \fB\-f\fR
 fast poll, if notifications aren't working.
 .TP
+\fB\-u\fR
+store username/password in addition to login token to avoid authentication expiration.
+.TP
 \fB\-v\fR
 verbose logging.
 .TP
