Man page fixups
Add -p option, and italicize.

--- a/debian/cloudprint.1
+++ b/debian/cloudprint.1
@@ -23,7 +23,10 @@ log out of the Google account. This deletes the account identification file, req
 cloudprint is run.
 .TP
 \fB\-a\fR \fI<account_file>\fR
-path to Google account ident data (default ~/.cloudprintauth). The format of the file is not public.
+path to Google account ident data (default \fI~/.cloudprintauth\fP). The format of the file is not public.
+.TP
+\fB\-p\fR \fI<pid_file>\fR
+path to PID file in daemon mode (default \fIcloudprint.pid\fP).
 .TP
 \fB\-c\fR
 establish credentials to the service, then exit.
