--- a/debian/cloudprint.1
+++ b/debian/cloudprint.1
@@ -37,6 +37,12 @@ fast poll, if notifications aren't working.
 \fB\-u\fR
 store username/password in addition to login token to avoid authentication expiration.
 .TP
+\fB\-i\fR \fIregexp\fR
+include local printers matching regular expression from the start of the printer name.
+.TP
+\fB\-x\fR \fIregexp\fR
+exclude local printers matching regular expression from the start of the printer name.
+.TP
 \fB\-v\fR
 verbose logging.
 .TP
