Add missing -d option to cloudprint man page

--- a/debian/cloudprint.1
+++ b/debian/cloudprint.1
@@ -28,6 +28,9 @@ path to Google account ident data (default \fI~/.cloudprintauth\fP). The format 
 \fB\-p\fR \fI<pid_file>\fR
 path to PID file in daemon mode (default \fIcloudprint.pid\fP).
 .TP
+\fB\-d\fR
+run in daemon mode.
+.TP
 \fB\-c\fR
 establish credentials to the service, then exit.
 .TP
