--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 cloudprint (0.11-3) unstable; urgency=low
 
   * Add support for cloudprint -i/-x.
+  * Documentation cleanup
 
  -- David Steele <dsteele@gmail.com>  Sat, 08 Feb 2014 18:17:59 -0500
 
