--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 cloudprint (0.11-3) unstable; urgency=low
 
-  * 
+  * Add support for cloudprint -i/-x.
 
  -- David Steele <dsteele@gmail.com>  Sat, 08 Feb 2014 18:17:59 -0500
 
