--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.11-3) unstable; urgency=low
+
+  * 
+
+ -- David Steele <dsteele@gmail.com>  Sat, 08 Feb 2014 18:17:59 -0500
+
 cloudprint (0.11-2) unstable; urgency=low
 
   * Fix bug in recovering from network outage.
