Update documentation for -i/-x operation

--- a/debian/cloudprint-service.8
+++ b/debian/cloudprint-service.8
@@ -43,10 +43,11 @@ It is recommended that a dedicated account be used for this service. Printers
 can be shared from that account to others via the printer management page at
 \fIhttps://www.google.com/cloudprint?#printers\fR
 
-.SH BUGS
-There have been instances where print job notifications don't work, causing
-long delays before jobs start. Uncomment the 'FAST_POLL' line in
-\fI/etc/default/cloudprintd\fR to invoke.
+.SH FILES
+.TP
+\fI/etc/default/cloudprintd\fR
+This file contains a number of parameters that control cloudprint.
+View the file for more details.
 
 .SH SEE ALSO
 .BR cloudprint (1)
