--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.11-3.1) cloudprintppa; urgency=low
+
+  * Release for 'cloudprintppa' dist, with hw-dependent Python Dep
+
+ -- David Steele <dsteele@gmail.com>  Sat, 08 Feb 2014 23:44:57 -0500
+
 cloudprint (0.11-3) unstable; urgency=low
 
   * Add support for cloudprint -i/-x.
