Move cloudprint-service man to section 7
It was in 8, but there is no cloudprint-service binary.

--- a/debian/cloudprint-service.7
+++ b/debian/cloudprint-service.7
@@ -2,7 +2,7 @@
 .\"
 .\" This file is part of cloudprint
 .\" Available under the terms of the GNU General Public License version 2 or later
-.TH CLOUDPRINT-SERVICE 8 "April 24, 2013"
+.TH CLOUDPRINT-SERVICE 7 2014-04-16 Linux "System Commands"
 .SH NAME
 cloudprint-service \- manage the Google Cloud Print proxy
 
@@ -50,4 +50,4 @@ This file contains a number of parameters that control cloudprint.
 View the file for more details.
 
 .SH SEE ALSO
-.BR cloudprint (1)
+.BR cloudprint(1), cloudprintd(8)
