--- a/debian/cloudprint-service.7
+++ b/debian/cloudprint-service.7
@@ -1,4 +1,4 @@
-.\" (C) Copyright 2013 David Steele <dsteele@gmail.com>,
+.\" (C) Copyright 2013-2014 David Steele <dsteele@gmail.com>,
 .\"
 .\" This file is part of cloudprint
 .\" Available under the terms of the GNU General Public License version 2 or later
