--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+cloudprint (0.11-6) unstable; urgency=low
+
+  * Limit print jobs names to avoid CUPS fail (thanks Alexandre Bury).
+  * Mark the Cloud Print job as failed if CUPS fails.
+  * Retry the print job on failure.
+
+ -- David Steele <dsteele@gmail.com>  Thu, 16 Apr 2015 21:39:22 -0400
+
 cloudprint (0.11-5) unstable; urgency=low
 
   * Fix init.d functionality breakage from daemon rename in 0.11-4.
