Minor man page fixes

--- a/debian/cps-auth.1
+++ b/debian/cps-auth.1
@@ -6,7 +6,7 @@
 cps-auth \- Perform OAuth2 authentication for cloudprint-service
 
 .SH SYNOPSIS
-\fB-auth\fP [\fI<user name>\fP]
+\fBcps-auth\fP [\fI<user name>\fP]
 
 .SH DESCRIPTION
 The \fBcps-auth\fP provide a sudo wrapper for entering the required OAuth2 credentials for
@@ -14,7 +14,7 @@ The \fBcps-auth\fP provide a sudo wrapper for entering the required OAuth2 crede
 the credentials locally for \fBcloudprint-service\fR.
 
 See \fBcloudprint-auth\fR for an alternative mechanism, if a graphical desktop is not available
-on the /fBcloudprint-service\fR server.
+on the \fBcloudprint-service\fR server.
 
 .SH FILES
 .TP
