--- a/debian/cps-auth.1
+++ b/debian/cps-auth.1
@@ -6,10 +6,10 @@
 cps-auth \- Perform OAuth2 authentication for cloudprint-service
 
 .SH SYNOPSIS
-\fBcps-auth\fP [\fI<user name>\fP]
+\fBcps-auth\fR [\fI<user name>\fR]
 
 .SH DESCRIPTION
-The \fBcps-auth\fP provide a sudo wrapper for entering the required OAuth2 credentials for
+The \fBcps-auth\fR provide a sudo wrapper for entering the required OAuth2 credentials for
 \fBcloudprint-service\fR. It will launch a browser window to complete the transaction, and then store
 the credentials locally for \fBcloudprint-service\fR.
 
@@ -22,4 +22,6 @@ on the \fBcloudprint-service\fR server.
 Credential storage location
 
 .SH SEE ALSO
-.BR cloudprint-service(7), cloudprintd(8), cloudprint(1), cps-auth(1), cloudprint-auth(1)
+.BR cloudprint-service(7), cloudprintd(8), cloudprint(1), 
+cps-auth(1), cloudprint-auth(1)
+
