changelog; Mark 0.11-8 as released

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cloudprint (0.11-8) UNRELEASED; urgency=low
+cloudprint (0.11-8) unstable; urgency=low
 
   * Fixes to declared dependencies.
   * Better GUI detection.
