Patch to remove GNOME OAuth2 requirement

--- a/debian/cloudprint-auth.1
+++ b/debian/cloudprint-auth.1
@@ -10,7 +10,8 @@ cloudprint-auth \- acquire OAuth2 credentials remotely for cloudprint-service
 
 .SH DESCRIPTION
 The \fBcloudprint-auth\fP performs the OAuth2 authentication for \fBcloudprint\fR
-or \fBcloudprint-service\fR, and outputs the credentials to stdout, in the format
+or \fBcloudprint-service\fR, and outputs the credentials to stdout, in the
+three-line format
 for the cloudprint authentication file. It is intended for remote use when
 the \fBcloudprint-service\fR server does not have a graphical environment.
 
