--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cloudprint (0.12-1) unstable; urgency=low
+
+  * Incorporate upstream 0.12.
+    - Difference OAuth2 implementation.
+
+ -- David Steele <dsteele@gmail.com>  Mon, 08 Jun 2015 21:50:28 -0400
+
 cloudprint (0.11-9) unstable; urgency=low
 
   * Remove the GNOME requirement for OAuth2.
