--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 cloudprint (0.12-1) unstable; urgency=low
 
   * Incorporate upstream 0.12.
-    - Difference OAuth2 implementation.
+    - Different OAuth2 implementation.
+  * Adapt to incompatible change to python-daemon
 
  -- David Steele <dsteele@gmail.com>  Mon, 08 Jun 2015 21:50:28 -0400
 
