Update auth environment for 0.12
Armooo's OAuth give a URL, vs. launching a browser.

Eliminate cloudprint-auth, and update cps-auth with the different
behavior.

--- a/debian/cloudprint-service.7
+++ b/debian/cloudprint-service.7
@@ -30,8 +30,8 @@ It is recommended that a dedicated account be used for this service. Printers
 can be shared from that account to others via the printer management page at
 \fIhttps://www.google.com/cloudprint?#printers\fR
 
-Authentication credentials can be established using the sudo-wrapper script
-\fBcps-auth\fR, or from a remote computer using \fBcloudprint-auth\fR.
+Authentication credentials can be established using the wrapper script
+\fBcps-auth\fR.
 .SH FILES
 .TP
 \fI/etc/default/cloudprintd\fR
@@ -39,4 +39,4 @@ This file contains a number of parameters that control cloudprint.
 View the file for more details.
 
 .SH SEE ALSO
-.BR cloudprint(1), cloudprintd(8), cps-auth(1), cloudprint-auth(1)
+.BR cloudprint(1), cloudprintd(8), cps-auth(1)
