--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.12-2) unstable; urgency=low
+
+  * Don't remove the old auth file, in case the upgrade fails.
+
+ -- David Steele <dsteele@gmail.com>  Mon, 06 Jul 2015 08:59:05 -0400
+
 cloudprint (0.12-1) unstable; urgency=low
 
   * Incorporate upstream 0.12.
