cloudprint-service.7: Fix "See Also" list

--- a/debian/cloudprint-service.7
+++ b/debian/cloudprint-service.7
@@ -39,4 +39,4 @@ This file contains a number of parameters that control cloudprint.
 View the file for more details.
 
 .SH SEE ALSO
-.BR cloudprint(1), cloudprintd(8), cps-auth(1)
+.BR cloudprint(1), cps-auth(1)
