--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ cloudprint (0.14-1) unstable; urgency=low
   * New upstream release.
   * Clear .pyc files from install (Closes: 797505)
   * Exit and suggest cps-auth on auth failure (Closes: 793610)
+  * Require the python-requests package (Closes: 799225)
 
  -- David Steele <dsteele@gmail.com>  Mon, 21 Sep 2015 19:18:12 -0400
 
