Start 0.14-2, with new conffile support
Use ConfigArgparse to support a configuration file in /etc/cloudprint.conf.

--- a/debian/cloudprint-service.7
+++ b/debian/cloudprint-service.7
@@ -37,6 +37,9 @@ Authentication credentials can be established using the wrapper script
 \fI/etc/default/cloudprintd\fR
 This file contains a number of parameters that control cloudprint.
 View the file for more details.
+.TP
+\fI/etc/cloudprint.conf\fR, \fI~/.cloudprint.conf\fR
+Can contain additional command line parameters for \fBcloudprint\fR.
 
 .SH SEE ALSO
 .BR cloudprint(1), cps-auth(1)
