--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.14-2) UNRELEASED; urgency=medium
+
+  * Add support for cloudprint parameters in a config file.
+
+ -- David Steele <dsteele@gmail.com>  Mon, 21 Sep 2015 22:50:50 -0400
+
 cloudprint (0.14-1) unstable; urgency=low
 
   * New upstream release.
