--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+cloudprint (0.13-1+deb8u3) UNRELEASED; urgency=medium
+
+  * Modify for Jessie
+    - Remove version requirement on python-requests.
+    - Revert back to support for older python-daemon module.
+
+ -- David Steele <dsteele@gmail.com>  Thu, 24 Sep 2015 21:35:16 -0400
+
 cloudprint (0.13-1) unstable; urgency=low
 
   * Upstream update, with bug fixes
