--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 cloudprint (0.14-2) UNRELEASED; urgency=medium
 
   * Add support for cloudprint parameters in a config file.
+  * Remove version requirement on setup.py 'requests' dependency.
 
  -- David Steele <dsteele@gmail.com>  Mon, 21 Sep 2015 22:50:50 -0400
 
