--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 cloudprint (0.13-1+deb8u3) UNRELEASED; urgency=medium
 
   * Modify for Jessie
+    - Brings OAuth support to Jessie.
+      (Closes: 799227, 800082)
     - Remove version requirement on python-requests.
     - Revert back to support for older python-daemon module.
 
