Feedback - cps-auth man loop
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=800163#10

--- a/debian/cps-auth.1
+++ b/debian/cps-auth.1
@@ -22,6 +22,5 @@ The command must be run as root.
 Credential storage location
 
 .SH SEE ALSO
-.BR cloudprint-service(7), cloudprintd(8), cloudprint(1),
-cps-auth(1)
+.BR cloudprint-service(7), cloudprintd(8), cloudprint(1)
 
