--- a/debian/cloudprint-service.7
+++ b/debian/cloudprint-service.7
@@ -1,25 +1,38 @@
-.\" (C) Copyright 2013-2015 David Steele <dsteele@gmail.com>,
+.\" (C) Copyright 2013-2014 David Steele <dsteele@gmail.com>,
 .\"
 .\" This file is part of cloudprint
 .\" Available under the terms of the GNU General Public License version 2 or later
-.TH CLOUDPRINT-SERVICE 7 2015-05-31 Linux "System Commands"
+.TH CLOUDPRINT-SERVICE 7 2014-04-16 Linux "System Commands"
 .SH NAME
 cloudprint-service \- manage the Google Cloud Print proxy
 
 .SH SYNOPSIS
 .TP
-systemctl \fIstart\fR \fBcloudprintd.service\fR
+service \fBcloudprintd\fR \fIlogin\fR
+Establish login credentials with Cloud Print, then immediately exit. This will
+prompt for a username and password, if necessary. If the account has two-factor
+authentication enabled, then an application-specific password must be used.
+This and all other \fBcloudprintd\fR service commands must be run as root.
+.TP
+service \fBcloudprintd\fR \fIstart\fR
 Start the \fBcloudprintd\fR service. This will fail if the credentials have not been
 established. The service will normally start automatically when the computer
 is running.
 .TP
-systemctl \fIstop\fR \fBcloudprintd.service\fR
+service \fBcloudprintd\fR \fIstop\fR
 Stop the \fBcloudprintd\fR service. Login credentials are not lost. Normally,
 the printer will continue to be shown as a valid destination. Any jobs spooled
 during that time will print when the service is restarted.
 .TP
-systemctl \fIstatus\fR \fBcloudprintd.service\fR
+service \fBcloudprintd\fR \fIstatus\fR
 Determine whether the service is running or not.
+.TP
+service \fBcloudprintd\fR \fIlogout\fR
+Delete the login credentials such that the service cannot be restarted without
+another 'login'.
+
+.P
+(...)
 
 .SH DESCRIPTION
 The \fBcloudprintd\fR services manages the operation of a Google Cloud Print
