cps-auth.1: Fix - script doesn't take user arg

--- a/debian/cps-auth.1
+++ b/debian/cps-auth.1
@@ -6,7 +6,7 @@
 cps-auth \- Perform OAuth2 authentication for cloudprint-service
 
 .SH SYNOPSIS
-\fBcps-auth\fR [\fI<user name>\fR]
+\fBcps-auth\fR
 
 .SH DESCRIPTION
 The \fBcps-auth\fR provide a wrapper for entering the required OAuth2
