--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cloudprint (0.13-1+deb8u1) UNRELEASED; urgency=medium
+cloudprint (0.13-1+deb8u1) stable; urgency=medium
 
   * Modify for Jessie
     - Brings OAuth support to Jessie.
