changelog: Fix the dist for 0.14-3
It Was incorrectly set to 'stable'.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cloudprint (0.14-3) stable; urgency=medium
+cloudprint (0.14-3) unstable; urgency=low
 
   * Add dependency for python-configargparse.
 
