--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.14-4) unstable; urgency=low
+
+  * 0.14-3 uploaded to wrong dist. Bump to retry.
+
+ -- David Steele <dsteele@gmail.com>  Tue, 29 Sep 2015 07:42:00 -0400
+
 cloudprint (0.14-3) unstable; urgency=low
 
   * Add dependency for python-configargparse.
