--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.13-1+deb8u1+ppa2) UNRELEASED; urgency=medium
+
+  * Add a waitforcups script to guarantee startup.
+
+ -- David Steele <dsteele@gmail.com>  Sat, 24 Oct 2015 20:16:37 -0400
+
 cloudprint (0.13-1+deb8u1+ppa1) cloudprintppa; urgency=low
 
   * PPA version of stable release - no multiarch dependencies.
