cps-auth.1: It doesn't take an argument

--- a/debian/cps-auth.1
+++ b/debian/cps-auth.1
@@ -1,12 +1,12 @@
-.\" Copyright 2015 David Steele <dsteele@gmail.com>
+.\" Copyright 2015-2016 David Steele <dsteele@gmail.com>
 .\" This file is part of cloudprint
 .\" Available under the terms of the GNU General Public License version 2 or later
-.TH cps-auth 1 2015-05-31 Linux "User Commands"
+.TH cps-auth 1 2016-04-27 Linux "User Commands"
 .SH NAME
 cps-auth \- Perform OAuth2 authentication for cloudprint-service
 
 .SH SYNOPSIS
-\fBcps-auth\fR [\fI<user name>\fR]
+\fBcps-auth\fR
 
 .SH DESCRIPTION
 The \fBcps-auth\fR provide a wrapper for entering the required OAuth2
