--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ cloudprint (0.14-8) UNRELEASED; urgency=medium
 
   * Fix bug in sitename support (Closes: 851689).
   * Fix auth file name in man (Closes: 851690).
+  * Add syslog-address to man page (Closes: 851691).
 
  -- David Steele <steele@debian.org>  Tue, 17 Jan 2017 16:56:24 -0500
 
