--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-cloudprint (0.14-8) UNRELEASED; urgency=medium
+cloudprint (0.14-8) unstable; urgency=medium
 
   * Fix bug in sitename support (Closes: 851689).
   * Fix auth file name in man (Closes: 851690).
   * Add syslog-address to man page (Closes: 851691).
 
- -- David Steele <steele@debian.org>  Tue, 17 Jan 2017 16:56:24 -0500
+ -- David Steele <steele@debian.org>  Tue, 17 Jan 2017 17:19:12 -0500
 
 cloudprint (0.14-7) unstable; urgency=medium
 
