--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cloudprint (0.14-10) unstable; urgency=medium
+
+  * Man page fix.
+  * Update watch file url for the new Pypi switch.
+
+ -- David Steele <steele@debian.org>  Sat, 14 Apr 2018 16:53:08 -0400
+
 cloudprint (0.14-9) unstable; urgency=medium
 
   * Depend on network-online.target (Closes: 875972).
