--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudprint (0.14-11) unstable; urgency=medium
+
+  * Switch to Python 3.
+
+ -- David Steele <steele@debian.org>  Mon, 29 Oct 2018 21:12:08 -0400
+
 cloudprint (0.14-10) unstable; urgency=medium
 
   * Man page fix.
