--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+cloudprint (0.14-13) UNRELEASED; urgency=medium
+
+  * Test fixes.
+  * Debian build fixes.
+  * Add NEWS of Cloudprint shutdown in Dec 2020.
+
+ -- David Steele <steele@debian.org>  Fri, 27 Dec 2019 17:00:18 -0500
+
 cloudprint (0.14-12) unstable; urgency=medium
 
   * Eliminate Python 2 autopkgtests.
