--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-cloudprint (0.14-13) UNRELEASED; urgency=medium
+cloudprint (0.14-13) unstable; urgency=medium
 
   * Test fixes.
   * Debian build fixes.
   * Add NEWS of Cloudprint shutdown in Dec 2020.
 
- -- David Steele <steele@debian.org>  Fri, 27 Dec 2019 17:00:18 -0500
+ -- David Steele <steele@debian.org>  Fri, 27 Dec 2019 17:12:49 -0500
 
 cloudprint (0.14-12) unstable; urgency=medium
 
