--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-cloudprint (0.14-14) UNRELEASED; urgency=medium
+cloudprint (0.14-14) unstable; urgency=medium
 
   * Don't requre a logging daemon (Closes: 954309).
 
- -- David Steele <steele@debian.org>  Thu, 19 Mar 2020 22:26:21 -0400
+ -- David Steele <steele@debian.org>  Fri, 17 Apr 2020 19:23:55 -0400
 
 cloudprint (0.14-13) unstable; urgency=medium
 
